<resources>
    <string name="app_name">Confucius Reading</string>
    <string name="toggle_dark_theme">Dark Mode</string>
    <string name="TheAnalectsTitle">"The Analects"</string>
    <string name="XueErTitle">"Xue Er"</string>
    <string name="WeiZhengTitle">"Wei Zheng"</string>
    <string name="BaYiTitle">"Ba Yi"</string>
    <string name="LiRenTitle">"Li Ren"</string>
    <string name="GongYeChangTitle">"Gong Ye Chang"</string>
    <string name="YongYeTitle">"Yong Ye"</string>
    <string name="ShuErTitle">"Shu Er"</string>
    <string name="TaiBoTitle">"Tai Bo"</string>
    <string name="ZiHanTitle">"Zi Han"</string>
    <string name="XiangDangTitle">"Xiang Dang"</string>
    <string name="XianJinTitle">"Xian Jin"</string>
    <string name="YanYuanTitle">"Yan Yuan"</string>
    <string name="ZiLuTitle">"Zi Lu"</string>
    <string name="XianWenTitle">"Xian Wen"</string>
    <string name="WeiLingGongTitle">"Wei Ling Gong"</string>
    <string name="JiShiTitle">"Ji Shi"</string>
    <string name="YangHuoTitle">"Yang Huo"</string>
    <string name="WeiZiTitle">"Wei Zi"</string>
    <string name="ZiZhangTitle">"Zi Zhang"</string>
    <string name="YaoYueTitle">"Yao Yue"</string>
    <string name="XueEr">"1. The Master said, \"Is it not pleasant to learn with a constant perseverance and application? Is it not delightful to have friends coming from distant quarters? Is he not a man of complete virtue, who feels no discomposure though men may take no note of him?\" \n\n2. The philosopher You said, \"They are few who, being filial and fraternal, are fond of offending against their superiors. There have been none, who, not liking to offend against their superiors, have been fond of stirring up confusion. The superior man bends his attention to what is radical. That being established, all practical courses naturally grow up. Filial piety and fraternal submission! - are they not the root of all benevolent actions?\" \n\n3. The Master said, \"Fine words and an insinuating appearance are seldom associated with true virtue.\" \n\n4. The philosopher Zeng said, \"I daily examine myself on three points: whether, in transacting business for others, I may have been not faithful; whether, in intercourse with friends, I may have been not sincere; whether I may have not mastered and practiced the instructions of my teacher.\" \n\n5. The Master said, \"To rule a country of a thousand chariots, there must be reverent attention to business, and sincerity; economy in expenditure, and love for men; and the employment of the people at the proper seasons.\" \n\n6. The Master said, \"A youth, when at home, should be filial, and, abroad, respectful to his elders. He should be earnest and truthful. He should overflow in love to all, and cultivate the friendship of the good. When he has time and opportunity, after the performance of these things, he should employ them in polite studies.\" \n\n7. Zi Xia said, \"If a man withdraws his mind from the love of beauty, and applies it as sincerely to the love of the virtuous; if, in serving his parents, he can exert his utmost strength; if, in serving his prince, he can devote his life; if, in his intercourse with his friends, his words are sincere - although men say that he has not learned, I will certainly say that he has.\" \n\n8. The Master said, \"If the scholar be not grave, he will not call forth any veneration, and his learning will not be solid. Hold faithfulness and sincerity as first principles. Have no friends not equal to yourself. When you have faults, do not fear to abandon them.\" \n\n9. The philosopher Zeng said, \"Let there be a careful attention to perform the funeral rites to parents, and let them be followed when long gone with the ceremonies of sacrifice - then the virtue of the people will resume its proper excellence.\" \n\n10. Zi Qin asked Zi Gong, saying, \"When our master comes to any country, he does not fail to learn all about its government. Does he ask his information? or is it given to him?\" Zi Gong said, \"Our master is benign, upright, courteous, temperate, and complaisant and thus he gets his information. The master\'s mode of asking information! - is it not different from that of other men?\" \n\n11. The Master said, \"While a man\'s father is alive, look at the bent of his will; when his father is dead, look at his conduct. If for three years he does not alter from the way of his father, he may be called filial.\" \n\n12. The philosopher You said, \"In practicing the rules of propriety, a natural ease is to be prized. In the ways prescribed by the ancient kings, this is the excellent quality, and in things small and great we follow them. Yet it is not to be observed in all cases. If one, knowing how such ease should be prized, manifests it, without regulating it by the rules of propriety, this likewise is not to be done.\" \n\n13. The philosopher You said, \"When agreements are made according to what is right, what is spoken can be made good. When respect is shown according to what is proper, one keeps far from shame and disgrace. When the parties upon whom a man leans are proper persons to be intimate with, he can make them his guides and masters.\" \n\n14. The Master said, \"He who aims to be a man of complete virtue in his food does not seek to gratify his appetite, nor in his dwelling place does he seek the appliances of ease; he is earnest in what he is doing, and careful in his speech; he frequents the company of men of principle that he may be rectified - such a person may be said indeed to love to learn.\" \n\n15. Zi Gong said, \"What do you pronounce concerning the poor man who yet does not flatter, and the rich man who is not proud?\" The Master replied, \"They will do; but they are not equal to him, who, though poor, is yet cheerful, and to him, who, though rich, loves the rules of propriety.\" Zi Gong replied, \"It is said in the Book of Poetry, \'As you cut and then file, as you carve and then polish.\' - The meaning is the same, I apprehend, as that which you have just expressed.\" The Master said, \"With one like Ci, I can begin to talk about the odes. I told him one point, and he knew its proper sequence.\" \n\n16. The Master said, \"I will not be afflicted at men\'s not knowing me; I will be afflicted that I do not know men.\""</string>
</resources>